--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,22 @@
 /* theme color */
-$--color-primary: teal;
+// $--color-primary: teal;
 
 /* icon font path, required */
 $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
 @import "~element-ui/packages/theme-chalk/src/index";
 
-html,body {
+html,
+body {
     margin: 0;
     padding: 0;
     height: 100%;
 }
+
 #app {
     height: 100%;
 }
+
 [v-cloak] {
     display: none;
 }
