--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,8 +8,8 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
 html,
 body {
-    margin: 0;
-    padding: 0;
+    margin: 0 !important;
+    padding: 0 !important;
     height: 100%;
 }
 
@@ -19,4 +19,13 @@ body {
 
 [v-cloak] {
     display: none;
+}
+.editor-body {
+    position: relative;
+}
+.editor-upload-btn {
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    z-index: 999;
 }
